--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     </main>
 
     <div class="img-container" style="--t:5s">
-        <img src="/Pictures/Pic1.jpg" class="container-images">
-        <img src="/Pictures/Pic2.jpg" class="container-images">
-        <img src="/Pictures/Pic3.jpg" class="container-images">
-        <img src="/Pictures/Pic4.jpg" class="container-images">
-        <img src="/Pictures/Pic5.jpg" class="container-images">
-        <img src="/Pictures/Pic6.jpg" class="container-images">
+        <img src="Pictures/Pic1.jpg" class="container-images">
+        <img src="Pictures/Pic2.jpg" class="container-images">
+        <img src="Pictures/Pic3.jpg" class="container-images">
+        <img src="Pictures/Pic4.jpg" class="container-images">
+        <img src="Pictures/Pic5.jpg" class="container-images">
+        <img src="Pictures/Pic6.jpg" class="container-images">
     </div>
 
     <div class="main-container">
