--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
             <nav>
                 
                 <ul class="nav-container">
-                    <li class="nav-item" id="companyName"><h2><a href="https://jomma52637.github.io/company-website/l">Picture Company</a></h2></li>
+                    <li class="nav-item" id="companyName"><h2><a href="https://jomma52637.github.io/company-website/">Picture Company</a></h2></li>
                     <li class="nav-item"><h2><a href="services.html">Services</a></h2></li>
                     <li class="nav-item"><h2><a href="contact.html">Contact us</a></h2></li>
                     <li class="nav-item"><h2><a href="about.html">About us</a></h2></li>
