--- a/contact.html
+++ b/contact.html
@@ -19,5 +19,31 @@
             </nav>
         </header>
 
+        <main>
+
+            <form target="index.html" name="message" method="post" class="contactForm">
+                <section>
+                    <label class="contactLabel" for="name">Name</label>
+                        <input id="name" type="text" value="" name="name">
+
+                    <label class="contactLabel" for="email">Email</label>
+                        <input id="email" type="email" value="" required name="email">
+
+                </section>
+
+                <section>
+                    <label class="contactLabel" for="subject">Subject</label>
+                        <input id="subject" type="text" value="" name="subject">
+
+                    <label class="contactLabel" for="message">Message</label>
+                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+
+                </section>
+                <input type="submit" value="Submit" id="submit" class="contactButton" onclick="href = 'index.html'">
+            </form>
+            
+
+
+        </main>
 </body>
 </html>
