--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </nav>
     </header>
 
+    <div class="spacer"></div>
     <main>
         <div class="main-container">
             <div class="companyName">
@@ -29,12 +30,12 @@
     </main>
 
     <div class="img-container" style="--t:5s">
-        <img src="Pictures/Pic1.jpg" class="container-images">
-        <img src="Pictures/Pic2.jpg" class="container-images">
-        <img src="Pictures/Pic3.jpg" class="container-images">
-        <img src="Pictures/Pic4.jpg" class="container-images">
-        <img src="Pictures/Pic5.jpg" class="container-images">
-        <img src="Pictures/Pic6.jpg" class="container-images">
+        <img src="/Pictures/Pic1.jpg" class="container-images">
+        <img src="/Pictures/Pic2.jpg" class="container-images">
+        <img src="/Pictures/Pic3.jpg" class="container-images">
+        <img src="/Pictures/Pic4.jpg" class="container-images">
+        <img src="/Pictures/Pic5.jpg" class="container-images">
+        <img src="/Pictures/Pic6.jpg" class="container-images">
     </div>
 
     <div class="main-container">
